# LocalizeAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
localize_agent/: .env  pyproject.toml  report.md
localize_agent/src/localize_agent/: cli.py  crew.py  main.py  models.py  pipeline.py  preflight.py  service.py
localize_agent/src/localize_agent/analyzers/: __init__.py  correlator.py  pmd.py  treesitter_java.py
localize_agent/src/localize_agent/config/: agents.yaml  pmd_design_ruleset.xml  tasks.yaml
localize_agent/src/localize_agent/datasets/: input.java
localize_agent/src/localize_agent/graph/: __init__.py  graph.py  nodes.py  result.py  state.py  tools.py
localize_agent/src/localize_agent/test_inputs/: test_input.java
localize_agent/src/localize_agent/tools/: __init__.py  code_analysis.py  custom_tool.py  custom_tools.py  test_count_methods.py
localize_agent/tests/: __init__.py  test_code_analysis.py  test_correlator.py  test_models.py  test_pipeline.py  test_preflight.py  test_service.py  test_treesitter.py
src/: cli.py  models.py
src/agent/: __init__.py  llm.py  nodes.py  result.py  state.py  tools.py  workflow.py
src/utils/: correlator.py  pmd.py  structural.py  treesitter.py
tests/: test_code_analysis.py  test_correlator.py  test_models.py  test_pipeline.py  test_service.py  test_treesitter.py
tests/fixtures/: test_input.java  test_input2.java
