[project]
name = "localize-agent"
version = "1.0.0"
description = "CLI to localize Java design issues using PMD, Tree-sitter, and LangGraph"
authors = [{ name = "Fraol Batole", email = "fraolahm@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.2.0,<0.4.0",
    "langchain-openai>=0.1.0,<0.4.0",
    "langchain-core>=0.2.0,<0.4.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tree-sitter>=0.22.0,<0.26.0",
    "tree-sitter-java>=0.23.0,<0.24.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[dependency-groups]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
localize-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
